--- a/openfisca_dummy_country/tests/failing_test_relative_error_margin.yaml
+++ b/openfisca_dummy_country/tests/failing_test_relative_error_margin.yaml
@@ -1,7 +1,7 @@
-- name: "Result within relative error margin"
+- name: "Failing test: result out of relative error margin"
   period: 2015-01
   relative_error_margin: 0.05
   input_variables:
     salaire_brut: 2000
   output_variables:
-    salaire_net: 1680 # 1600
+    salaire_net: 1700
